# house-code

./: .gitignore  .gitmodules  ARCHITECTURE.md  README.md  SUMMARY.md  VISUAL_MEMORY_PLAN.md  pyproject.toml  test_cleaner_agent.py  test_phase3.py  test_renderer.py  test_visual_memory.py
docs/research/visual-memory-archive/: OCR_TEST_RESULTS.md  PHASE2_DECISION_MATRIX.md  README.md  deepseek_ocr_test_1.ipynb  deepseek_ocr_test_2_final.ipynb  deepseek_ocr_test_3_final.ipynb  poc_archive_ocr.py  poc_long_conversation.py
docs/research/visual-memory-archive/visual/: __init__.py  layout.py  mock.py  models.py  renderer.py
house_code/: banner.py  cli.py  core.py  garbage_collector.py  progress.py  subagents.py
house_code.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
house_code/tools/: bash.py  edit.py  glob.py  grep.py  read.py  registry.py  todowrite.py  visual_memory.py  write.py
house_code/visual/: __init__.py  cache.py  config.py  highlighter.py  models.py  rosie_client.py
internal-rebuild-notes/: ARCHITECTURE.md  REFLECTION.md  SUMMARY.md
runpod_server/: README.md  config.yaml  inference.py  mcp_server.py  requirements.txt  setup.sh  test_server.py
tests/: DEEPSEEK_OCR_CODE_RESEARCH.md  VISUAL_RENDERING_VALIDATION.md  test_gc_integration.py  test_phase2.py  test_visual_tools.py
tests/progress/: demo_progress.py  demo_subagent.py  test_progress.py
